# mods

./: .clang-format  .editorconfig  .gitignore  .prettierignore  CMakeLists.txt  CMakePresets.json  README.md  package-lock.json  package.json  rollup.config.js  sea.config.json  tsconfig.json
.github/workflows/: discord.yml  main.yml  release.yml
cli/: create.mts
custom/complexity/: metadata.json
custom/eu-competition/: metadata.json
custom/retro-strike/: metadata.json
custom/retro-strike/databases/: save_0.db
custom/retro-strike/saves/: save_0.db
custom/sk-gaming/: metadata.json
custom/sk-gaming/databases/: save_0.db
mods/Real_CS_2026/custom/: metadata.json
mods/Real_CS_2026/custom/saves/: save_0.db
mods/Real_CS_October_2025/custom/: metadata.json
mods/Real_CS_October_2025/custom/avatars/: Nuovo documento di testo.txt
mods/Real_CS_October_2025/custom/saves/: save_0.db
mods/Realism_Database_2025/custom/: metadata.json
mods/Realism_Database_2025/custom/saves/: save_0.db
mods/america-premier/custom/: metadata.json
mods/america-premier/custom/saves/: save_0.db
mods/eu-competition/custom/: metadata.json
mods/eu-competition/custom/saves/: save_0.db
mods/fantasy_liga/: metadata.json
mods/fantasy_liga/saves/: save_0.db
mods/football/custom/: metadata.json
mods/football/custom/saves/: save_0.db
mods/pro-journey/custom/: metadata.json
mods/retro-strike/: teams.md
mods/retro-strike/custom/: metadata.json
mods/retro-strike/custom/saves/: save_0.db
resources/: resource.hpp  resource.in.rc  resource.rc
src/: main.cpp
